--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "home",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,10 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://lunatos.github.io/portfolio",
+  "homepage": "https://lunatos.github.io/home",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
