--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "home",
+  "homepage": "https://lunatos.github.io/home/#",
   "private": true,
   "version": "0.0.0",
   "type": "module",
